package NYT.NYTree.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqGet
{ }

message TRspGet
{
    required bytes Value = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqGetNode
{ }

message TRspGetNode
{
    required int64 Value = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqSet
{
    required bytes Value = 1;
}

message TRspSet
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqSetNode
{
    required int64 Value = 1;
}

message TRspSetNode
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqRemove
{ }

message TRspRemove
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqList
{ }

message TRspList
{
    repeated bytes Keys = 1;
}

////////////////////////////////////////////////////////////////////////////////
